Finished owasp 8 - Software and Data Integrity Failures by implementing a fetch feature which doesnt sanitize data collected from a different server

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+<meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -169,7 +170,11 @@
         </ul>
     </aside>
 </main>
+<h1>Today's hot deals</h1>
+<div id="data-container"></div>
 
+<!--<script>alert('This is an XSS attack!')</script>-->
+<!-- placeholder -->
 <footer>
     <p>&copy; 2024 Today's News. All rights reserved.</p>
 </footer>
